--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>首頁 | 內容訂閱網站</title>
+		<title>首頁 | 大型線上服務</title>
 
 		<script type="module" crossorigin src="/training-2024week8/assets/main-5d060f88.js"></script>
 		<link rel="stylesheet" href="/training-2024week8/assets/main-929a083b.css">
